--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "redlock": "^4.0.0",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.7",
+    "s3-zip": "^3.1.3",
     "stream-transcoder": "0.0.5",
     "ts-node": "^8.6.2",
     "universal-analytics": "^0.4.20"
