--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "cryptiles": "4.1.2",
     "event-stream": "3.3.4",
     "@types/react": "16.9.19",
-    "minimist": "1.2.3",
-    "serialize-javascript": "^3.1.0"
+    "minimist": "^1.2.3",
+    "serialize-javascript": "^3.1.0",
+    "dot-prop": "^4.2.1"
   },
   "scripts": {
     "build": "yarn build-common && concurrently \"cd server && yarn build\" \"cd web && yarn build\" \"cd maintenance && yarn build\"",
