Set X-Release-Version header to git commit sha

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -81,6 +81,8 @@ jobs:
           push: true
           file: ./docker/Dockerfile
           tags: ${{ steps.tags.outputs.tags }}
+          build-args: |
+            COMMIT=$GITHUB_SHA
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
