--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,7 +82,8 @@ jobs:
           file: ./docker/Dockerfile
           tags: ${{ steps.tags.outputs.tags }}
           build-args: |
-            COMMIT=${GITHUB_SHA}
+            COMMIT=${{ github.sha }}
+            TAG=${{ steps.tags.outputs.tags }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
