--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     image: mysql:5.6.39
     networks:
       - voice-web
+    ports: 
+      - 3306:3306
     container_name: db
     restart: unless-stopped
     environment:
@@ -11,13 +13,13 @@ services:
       - MYSQL_USER=voicecommons
       - MYSQL_PASSWORD=voicecommons
       - MYSQL_ROOT_PASSWORD=voicewebroot
-  s3proxy:
-    image: andrewgaul/s3proxy
-    container_name: s3proxy
-    networks:
-      - voice-web
-    environment:
-      - S3PROXY_AUTHORIZATION=none
+  # s3proxy:
+  #   image: andrewgaul/s3proxy
+  #   container_name: s3proxy
+  #   networks:
+  #     - voice-web
+  #   environment:
+  #     - S3PROXY_AUTHORIZATION=none
   web:
     build:
       context: .
