--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "node": ">=10.17.0"
   },
   "resolutions": {
-    "cryptiles": "4.1.2",
-    "event-stream": "3.3.4",
-    "@types/react": "16.9.19",
+    "event-stream": "^3.3.4",
+    "@types/react": "^16.9.19",
     "minimist": "^1.2.3",
     "serialize-javascript": "^3.1.0",
-    "dot-prop": "^4.2.1"
+    "dot-prop": "^4.2.1",
+    "node-notifier": "^8.0.1",
+    "y18n": "^4.0.1",
+    "netmask": "^2.0.1",
+    "is-svg": "^4.2.2",
+    "ssri": "^8.0.1"
   },
   "scripts": {
     "build": "yarn build-common && concurrently \"cd server && yarn build\" \"cd web && yarn build\" \"cd maintenance && yarn build\"",
