--- a/web/package.json
+++ b/web/package.json
@@ -50,32 +50,33 @@
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@sentry/browser": "^5.10.2",
-    "@types/webpack": "^4.41.0",
-    "@types/webpack-merge": "^4.1.5",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-merge": "^5.0.0",
+    "@vue/preload-webpack-plugin": "^2.0.0",
     "@yr/monotone-cubic-spline": "^1.0.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.2",
     "chalk": "^3.0.0",
     "common": "*",
     "concurrently": "^5.1.0",
     "css-loader": "^3.4.0",
     "cssnano": "^4.1.10",
     "file-loader": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "husky": "^4.2.1",
-    "mini-css-extract-plugin": "^0.8.2",
+    "mini-css-extract-plugin": "^1.4.0",
+    "postcss": "^8.2.9",
     "postcss-color-mod-function": "^3.0.3",
     "postcss-custom-media": "^7.0.8",
     "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^5.2.0",
     "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "preload-webpack-plugin": "^3.0.0-beta.3",
     "react-dev-utils": "^11.0.4",
     "style-loader": "^1.0.2",
-    "ts-loader": "^6.2.1",
-    "webpack": "^4.41.5",
+    "ts-loader": "^8.1.0",
+    "webpack": "^5.28.0",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^4.6.0"
   },
   "scripts": {
     "build": "webpack --mode=production",
