--- a/web/package.json
+++ b/web/package.json
@@ -80,7 +80,7 @@
   },
   "scripts": {
     "build": "webpack --mode=production",
-    "dev": "webpack --mode=development --watch --display=errors-only",
+    "dev": "webpack --mode=development --watch",
     "test": "yarn build"
   },
   "browserslist": [
