--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -1,5 +1,5 @@
 # Number of days of inactivity before an issue becomes stale
-daysUntilStale: 1095
+daysUntilStale: 730
 # Number of days of inactivity before a stale issue is closed
 daysUntilClose: 30
 # Issues with these labels will never be considered stale
@@ -10,7 +10,8 @@ exemptLabels:
 staleLabel: stale
 # Comment to post when marking an issue as stale. Set to `false` to disable
 markComment: >
-  This issue has been automatically marked as stale because it has not been updated in 3 years. It will be closed if no further activity occurs within the next 30 days.
+  This issue has been automatically marked as stale because it has not been updated in 2 years. It will be closed if no further activity occurs within the next 30 days.
 # Comment to post when closing a stale issue. Set to `false` to disable
 closeComment: >
-  This issue has been automatically closed due to lack of activity. Please feel free to open a new issue if you require further assistance. Thank you for your contributions.
+  This issue has been automatically closed due to lack of activity. Please feel free to re-open if you need further assistance.
+only: issues
