Enable buffered streaming for aac/opus codecs

--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "express-mysql-session": "^2.1.0",
     "express-promise-router": "^3.0.1",
     "express-session": "^1.16.2",
+    "ffmpeg-stream": "^0.7.0",
     "http-proxy-middleware": "^0.20.0",
     "ioredis": "^4.14.0",
     "js-md5": "^0.7.3",
