--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "is-svg": "^4.2.2",
     "ssri": "^8.0.1",
     "merge": "^2.1.1",
-    "underscore": "^1.12.1"
+    "underscore": "^1.12.1",
+    "browserslist": "^4.16.5"
   },
   "scripts": {
     "build": "yarn build-common && concurrently \"cd server && yarn build\" \"cd web && yarn build\"",
