Continuation of takeout work from #3133 (#3242)
* Implement profile download (aka takeout).

* Add missing import

* Update yarn lock after resolving conflicts

* Polish takeout

* Add missing imports
* Tweak copy
* Tweak download display
* Add some extra logging
* Change rate-limiting parameters

* Optimize takeout performance, add sentence text

* Get file paths from db, not from listObject
* Passthrough stream s3 zip back up to s3
* Add sentence ID + text as extra file

Co-authored-by: Alexandre Macabies <web+oss@zopieux.com>

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@sentry/node": "5.12.2",
+    "@types/bull": "^3.15.1",
     "@types/commonmark": "^0.27.4",
     "@types/crypto-js": "^3.1.43",
     "@types/event-stream": "^3.3.34",
@@ -21,6 +22,7 @@
     "@types/universal-analytics": "^0.4.3",
     "aws-sdk": "^2.503.0",
     "body-parser": "^1.19.0",
+    "bull": "^3.22.6",
     "common": "*",
     "commonmark": "^0.29.0",
     "cookie-parser": "^1.4.4",
@@ -52,6 +54,7 @@
     "redlock": "^4.0.0",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.7",
+    "s3-zip": "^3.2.0",
     "stream-transcoder": "0.0.5",
     "ts-node": "^8.6.2",
     "universal-analytics": "^0.4.20"
