fix(docker): build sandbox only
Signed-off-by: Robert Müller <rmuller@mozilla.com>

--- a/.github/workflows/build_and_push_to_gar.yml
+++ b/.github/workflows/build_and_push_to_gar.yml
@@ -3,8 +3,8 @@ name: build and push to GAR
 on:
   push:
     tags:
-      - 'release-v*.*.*'
-      - 'stage-v*.*.*'
+      #- 'release-v*.*.*'
+      #- 'stage-v*.*.*'
       - 'sandbox-v*.*.*'
 
 jobs:
