--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "ioredis": "4.28.5",
     "jose": "^5.9.6",
     "js-md5": "0.7.3",
+    "jsonwebtoken": "^9.0.2",
     "mp3-duration": "^1.1.0",
     "mysql2": "^3.11.3",
     "nodemailer": "6.9.14",
@@ -59,6 +60,7 @@
     "@types/http-proxy-middleware": "0.19.3",
     "@types/ioredis": "4.28.10",
     "@types/jest": "27.5.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mysql": "2.15.26",
     "@types/node": "12.20.55",
     "@types/node-fetch": "2.6.2",
