revert docker cp

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -42,7 +42,7 @@ RUN yarn
 # Run build
 RUN yarn build
 
-RUN cp -r web/img/* web/dist/img/
+#RUN cp -r web/img/* web/dist/img/
 
 # Default command to start the server
 CMD yarn start 2>&1 | tee /code/logs/voice-server.log
